<resources>
    <string name="app_name">Ric</string>
    <string name="slide1_intro">Olá, me chamo Ricardo.</string>
    <string name="bemvindo_slide1">Seja bem vindo ao meu aplicativo!!</string>
    <string name="todo">TODO</string>
    <string name="menu_email">Enviar e-mail</string>
    <string name="more_about">Mais sobre mim</string>
    <string name="profissao_text">Dinâmico, comunicativo e com grande facilidade para trabalhar em equipe. Esforçado, estudioso e disposto a aprender. Facilidade em aprender de forma autonoma, com pesquisas e consultas de material técnico.</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_song_text">Cadastre um novo processo</string>
    <string name="hint_musica">Número do Processo</string>
    <string name="hint_album">Fase Processual</string>
    <string name="hint_banda">Observação</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="academico_text">Graduação em Direito pela Puc-Rio e inscrito nos quadros da Ordem de Advogados do Brasil (OAB) desde 2014. Pós Graduação com previsão de término em 2020 pela INFNET em desenvolvimento mobile. Tecnologias: Html, Css, Javascript, React, Java, Android.</string>
    <string name="title_activity_lawyer_app">LawyerApp</string>
    <string name="profissao_1">Dinâmico, comunicativo e com grande facilidade para trabalhar em equipe.</string>
    <string name="profissao_2">Esforçado, estudioso e disposto a aprender.</string>
    <string name="profissao_3">Facilidade em aprender de forma autonoma, com pesquisas e consultas de material técnici, inclusive em outras línguas.</string>
    <string name="academico_1">Graduação em Direito pela PUC-RIO e inscrito nos quadros da OAB/RJ desde 2014.</string>
    <string name="academico_2">MIT em Desenvolvimento Mobile pelo instituto INFNET com previsão de término em 2020.</string>
    <string name="profissao_4">Tecnologias: Html, Css, Javascript, React, Java, Android, Webpack, Git.</string>
</resources>
