<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margem_entre_texto"
            android:text="@string/add_new_song_text"
            android:textSize="@dimen/grande"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/numeroInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margem_entre_texto"
            android:ems="10"
            android:hint="@string/hint_musica"

            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/faseInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margem_entre_texto"
            android:ems="10"
            android:hint="@string/hint_album"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/obsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margem_entre_texto"
            android:ems="10"
            android:hint="@string/hint_banda"
            android:inputType="textPersonName" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margem_entre_texto"
            android:clickable="true"
            android:onClick="saveBand"
            app:srcCompat="@drawable/save" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margem_entre_texto"
            android:clickable="true"
            android:onClick="saveBand"
            app:srcCompat="@drawable/close" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>